# fdf

./: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  README.md  README.org  compile_commands.json
example_binaries/: fdf
includes/: bresenham.h  circle.h  fdf.h  image.h  matrix.h  mlx_helper.h  my_mlx.h  rectangle.h
libft/: Makefile  get_next_line.c
roam/: 20241022190002-mlx.org  20241023101619-mlx_init.org  20241023101709-x_window_concept.org  20241023102143-x_server.org  20241023102153-software.org  20241023102546-mlx_window_api.org  20241023103220-mlx_drawing_api.org  20241023103227-color.org  20241023105350-mlx_image_api.org  20241023115435-image_api_usage.org  20241025182858-mlx_handle_events.org  20241025203728-x11_events.org  20241025204023-x11_masks.org  20241025213912-keycode_vs_keysym.org  20241026112612-isometric_projection.org  20241026121630-axonometric_projection.org  20241026121709-orthographic_projection.org  20241027094629-computer_graphics.org  20241027094649-bresenham_algorithms.org  20241027094700-bresenham_line_algorithm.org  20241027094723-bresenham_circle_algorithm.org  fdf.db
run/: main.c
src/: bresenham.c  bresenham1.c  bresenham2.c  bresenham_not_used.c  change_projection.c  circle.c  event_handler.c  event_handler1.c  event_handler2.c  gradient.c  helper.c  helpers.c  hooks.c  image.c  isometric_projection.c  line.c  main.c  mat_mul.c  matrix.c  movement.c  parallel_projection.c  parse_map.c  parse_map2.c  projection.c  rectangle.c  rotation.c  scaling.c  translation.c  triangle.c  wireframe.c
src/bresenham.bak/: bresenham_not_used.c
src/mlx_experiments.bak/: circle.c  gradient.c  scale.c  test_scale.cpp
test_maps/: elem2-color.fdf  elem3.fdf
tests/: mock_testing1.org  test_bresenham.cpp  test_fdf.hpp  test_gradient.cpp  test_helpers.cpp  test_lines.cpp  test_main.cpp  test_matrix_mult.cpp  test_movement.cpp  test_parse_map.cpp  test_wireframe.cpp
(+7 files in other folders)
